updated TABLE_PATH_QUERY in ingestion, and switched to logback module from logger(still logs not being send)